Remove disclaimer at the start

--- a/wwwroot/config.json
+++ b/wwwroot/config.json
@@ -27,7 +27,7 @@
         },
         */
 
-        // Pop-up disclaimer that will be shown at the start
+        /*// Pop-up disclaimer that will be shown at the start
         // The text of the disclaimer is in lib/Views/GlobalDisclaimer.html
         globalDisclaimer: {
             confirmationRequired: true,
@@ -38,7 +38,7 @@
             //prodHostRegex: "gov.\\.au$",
             //devHostRegex: "\\b(staging|preview|test|dev)\\.",
             enableOnLocalhost: true // If false, don't show this when running on localhost
-        },
+        },*/
 
         /*
         developerAttribution: {
