--- a/wwwroot/config.json
+++ b/wwwroot/config.json
@@ -49,9 +49,9 @@
 
         // See comments in lib/Views/global.scss for further information about customising colors, logos, fonts etc.
         brandBarElements: [
-            "<span style='font-size: larger; color: white'>Digital Earth Australia</span>",
+            "<img src='images/DE-Australia-logo.png' alt='Digital Earth Australia' title='Version: {{version}}'/>",
+            "<div style='display: inline-block; text-align: center; width: 115px; height: 60px; color: white'><span style='font-size: small'>Prototype Map</span><br/><span style='font-size: xx-small'>{{version}}</span></div>",
             "<a href='https://data61.csiro.au/' target='_blank'><img class='right' src='images/DATA61_CSIRO.png' alt='Data61' style=\"width: 55px; height: 33px; float: right; margin-top: 7.5px;\"/></a>",
-            "<br/><span style='font-size: xx-small; color: white'>Version: {{version}}</span>",
         ],
         // Shown when things go wrong.
         supportEmail: "help@example.com",
