--- a/wwwroot/config.json
+++ b/wwwroot/config.json
@@ -51,8 +51,8 @@
 
         // See comments in lib/Views/global.scss for further information about customising colors, logos, fonts etc.
         brandBarElements: [
-            "<a id='primary-logo' target='_blank' rel='noreferrer noopener' style=\"vertical-align:top;\";><img src='images/DE-Australia-logo.png' class='left' style=\"width: 130px; padding-top: 5px; padding-left: 5px\" alt='Digital Earth Australia' title='Version: {{version}}'/></a>",
-            "<a id='secondary-logo' href='https://data61.csiro.au/' target='_blank'><img class='right' style=\"width:65px; padding-bottom: 10px; padding-left: 15px\" src='images/data61-csiro.svg' alt='Data61 logo' title='Data61 logo'/></a>",
+            "<a id='primary-logo' target='_blank' rel='noreferrer noopener' style=\"vertical-align:top;\"><img src='images/DE-Australia-logo.png' class='left' style=\"width: 130px; padding-top: 5px; padding-left: 5px;\" alt='Digital Earth Australia' title='Version: {{version}}'/></a>",
+            "<a id='secondary-logo' href='https://data61.csiro.au/' target='_blank'><img class='right' style=\"width:65px; padding-bottom: 10px; padding-left: 15px;\" src='images/data61-csiro.svg' alt='Data61 logo' title='Data61 logo'/></a>",
             "<a id='tertiary-logo' target='https://www.ga.gov.au/' rel='noreferrer noopener'><img src='images/geoscience_stacked.svg' style=\"padding-bottom: 5px; width: 110px;\"  alt='Geoscience Australia logo' title='Geoscience Australia logo'/></a>",
         ],
         // Shown when things go wrong.
@@ -72,6 +72,14 @@
 
         // To override TerriaJS's region mapping file with a local one.
         // regionMappingDefinitionsUrl: "data/regionMapping.json"
+        "customRequestSchedulerLimits": {
+          "ows.dev.dea.ga.gov.au:443": 64,
+          "ows.prod.dea.ga.gov.au:443": 64,
+          "ows.services.dea.ga.gov.au:443": 64,
+          "ows.dea.ga.gov.au:443": 64,
+          "gsky.nci.org.au:80": 64,
+          "gsky.nci.org.au:443": 64,
+        }
     }
 }
 
