--- a/wwwroot/config.json
+++ b/wwwroot/config.json
@@ -28,18 +28,19 @@
         },
         */
 
-        /*// Pop-up disclaimer that will be shown at the start
+        // Pop-up disclaimer that will be shown at the start
         // The text of the disclaimer is in lib/Views/GlobalDisclaimer.html
         globalDisclaimer: {
             confirmationRequired: true,
-            buttonTitle: "I agree",
+            buttonTitle: "Acknowledge",
+            denyText: "Cancel",
             title: "Disclaimer",
             // If the current browser location is not prod, or is dev, then show a "not the real site" warning.
             // The text of that is in lib/Views/DevelopmentDisclaimerPreamble.html
             //prodHostRegex: "gov.\\.au$",
             //devHostRegex: "\\b(staging|preview|test|dev)\\.",
             enableOnLocalhost: true // If false, don't show this when running on localhost
-        },*/
+        },
 
         /*
         developerAttribution: {
